tests/e2e/cases/bad_inheritance.err
Error: bad_inheritance.clawr:7:17:Object 'Subtype' cannot inherit from 'Super' because it has no inheritance section
