tests/e2e/cases/bad_inheritance.clawr
object Super {
data:
  dataField: integer
}

// This should be an error as Super lacks an ´inheritance´ section and cannot be inherited from.
object Subtype: Super {
}
